Fixed Endpoints/ Vuex